<resources>
    <string name="app_name">TheNewsReader</string>
    <string name="content_authority">com.lednhatkhanh.thenewsreader</string>
    
    <string name="error_message">Something bad happened!</string>
    <string name="unknown_author">Unknown</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="pref_source_default">the-next-web</string>
    <string name="pref_source_label">Source</string>
    <string name="pref_source_key" translatable="false">source</string>
    
    <string name="pref_sortBy_label">Sort By</string>
    <string name="pref_sortBy_key" translatable="false">sort_by</string>
    <string name="pref_sortBy_label_top">Top</string>
    <string name="pref_sortBy_top" translatable="false">top</string>
    <string name="pref_sortBy_label_latest">Latest</string>
    <string name="pref_sortBy_latest" translatable="false">latest</string>
    <string name="pref_sortBy_label_popular">Popular</string>
    <string name="pref_sortBy_popular" translatable="false">popular</string>
    
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Enable Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_last_notification" translatable="false">last_notification</string>
</resources>
