<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:defaultValue="@string/pref_source_default"
        android:inputType="text"
        app:key="@string/pref_source_key"
        android:singleLine="true"
        android:title="@string/pref_source_label"/>

    <ListPreference
        android:defaultValue="@string/pref_sortBy_latest"
        android:entries="@array/pref_sortBy_options"
        android:entryValues="@array/pref_sortBy_values"
        android:key="@string/pref_sortBy_key"
        android:title="@string/pref_sortBy_label"/>

    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label"/>
</PreferenceScreen>